--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,7 @@ indent_style = space
 indent_size = 2
 indent_style = space
 insert_final_newline = true
+
+[*.sh]
+indent_size = 2
+indent_style = space
