--- a/.github/workflows/publish_script_manual.yaml
+++ b/.github/workflows/publish_script_manual.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Run analysis and download
         id: analysis
         run: |
-          ./bin/download-script.sh ${{ github.event.inputs.script_type }}
+          ./bin/download-script.sh ${{ github.event.inputs.script_name }}
         env:
           GITHUB_RELEASE_DATE: ${{ env.RELEASE_DATE }}
           GITHUB_RELEASE_TAG: ${{ env.RELEASE_TAG }}
@@ -37,10 +37,10 @@ jobs:
           body: |
             ## 📦 Информация о релизе
 
-            Данный релиз содержит файл `${{ github.event.inputs.script_type }}`, который был загружен с официального сайта 1С-Битрикс.
+            Данный релиз содержит файл `${{ github.event.inputs.script_name }}`, который был загружен с официального сайта 1С-Битрикс.
 
             **Мета информация:**
-            - Наименование: ${{ github.event.inputs.script_type }}
+            - Наименование: ${{ github.event.inputs.script_name }}
             - MD5: `${{ env.BITRIX_META_SCRIPT_MD5 }}`
             - SHA1: `${{ env.BITRIX_META_SCRIPT_SHA1 }}`
             - SHA256: `${{ env.BITRIX_META_SCRIPT_SHA256 }}`
