--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        script: [
+        script_name: [
           bitrixsetup.php,
           bitrix_server_test.php,
           restore.php
@@ -34,7 +34,7 @@ jobs:
       - name: Run analysis and download
         id: analysis
         run: |
-          ./bin/download-distro.sh ${{ matrix.script }}
+          ./bin/download-distro.sh ${{ matrix.script_name }}
         env:
           GITHUB_RELEASE_DATE: ${{ env.RELEASE_DATE }}
           GITHUB_RELEASE_TAG: ${{ env.RELEASE_TAG }}
@@ -42,15 +42,15 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ matrix.script }}-${{ env.BITRIX_MAIN_VERSION }}
-          name: "${{ matrix.distro }} v${{ env.BITRIX_MAIN_VERSION }}"
+          tag_name: ${{ matrix.script_name }}-${{ env.BITRIX_MAIN_VERSION }}
+          name: "${{ matrix.script_name }} v${{ env.BITRIX_MAIN_VERSION }}"
           body: |
             ## 📦 Информация о релизе
 
-            Данный релиз содержит файл `${{ matrix.script }}`, который был загружен с официального сайта 1С-Битрикс.
+            Данный релиз содержит файл `${{ matrix.script_name }}`, который был загружен с официального сайта 1С-Битрикс.
 
             **Мета информация:**
-            - Наименование: ${{ matrix.script }}
+            - Наименование файла: `${{ matrix.script_name }}`
             - MD5: `${{ env.BITRIX_META_SCRIPT_MD5 }}`
             - SHA1: `${{ env.BITRIX_META_SCRIPT_SHA1 }}`
             - SHA256: `${{ env.BITRIX_META_SCRIPT_SHA256 }}`
