--- a/.github/workflows/publish_script_manual.yaml
+++ b/.github/workflows/publish_script_manual.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo "RELEASE_TAG=${{ github.event.inputs.script_name }}-$(date +'%Y%m%d')" >> $GITHUB_ENV;
           echo "RELEASE_DATE=$(date +'%d.%m.%Y')" >> $GITHUB_ENV;
-      - name: Run analysis and download
+      - name: Download script & create manifest
         id: analysis
         run: |
           ./bin/download-script.sh ${{ github.event.inputs.script_name }}
