--- a/.github/workflows/publish_distros_schedule.yaml
+++ b/.github/workflows/publish_distros_schedule.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run analysis and download
+      - name: Download distros & create manifest
         id: analysis
         run: |
           chmod +x ./bin/download-distro.sh
