--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -49,8 +49,8 @@ jobs:
 
             Данный релиз содержит файл `${{ matrix.script_name }}`, который был загружен с официального сайта 1С-Битрикс.
 
-            **Мета информация:**
-            - Наименование файла: `${{ matrix.script_name }}`
+            **File meta:**
+            - Name: `${{ matrix.script_name }}`
             - MD5: `${{ env.BITRIX_META_SCRIPT_MD5 }}`
             - SHA1: `${{ env.BITRIX_META_SCRIPT_SHA1 }}`
             - SHA256: `${{ env.BITRIX_META_SCRIPT_SHA256 }}`
