--- a/.github/workflows/publish_script_manual.yaml
+++ b/.github/workflows/publish_script_manual.yaml
@@ -39,7 +39,7 @@ jobs:
 
             Данный релиз содержит файл `${{ github.event.inputs.script_name }}`, который был загружен с официального сайта 1С-Битрикс.
 
-            **File meta:**
+            **Мета информация:**
             - Наименование файла: `${{ github.event.inputs.script_name }}`
             - MD5: `${{ env.BITRIX_META_SCRIPT_MD5 }}`
             - SHA1: `${{ env.BITRIX_META_SCRIPT_SHA1 }}`
