--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -66,11 +66,10 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          debug: true
           disable_notification: true
           format: html
           message: |
-            🚀 <b>Новый релиз скрипта!</b>
+            🚀 <b>Новый релиз скрипта! ${{ secrets.TELEGRAM_CHAT_ID }}</b>
 
             <b>Наименование:</b> <code>${{ matrix.script_name }}</code>
 
