--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -68,10 +68,4 @@ jobs:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           format: html
           message: |
-            🚀 <b>Новый релиз скрипта!</b>
-
-            <b>Наименование:</b> <code>${{ matrix.script_name }}</code>
-
-            🔗 <a href="https://github.com/${{ github.repository }}/releases/tag/${{ env.RELEASE_TAG }}">View Release</a>
-
-            #github #bitrix #script
+            Hello!
