--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -69,9 +69,4 @@ jobs:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           format: html
           disable_notification: true
-          message: |
-            🚀 <b>New Bitrix Script</b>
-            📦 Filename: <code>${{ matrix.script_name }}</code>
-            🔗 <a href="https://github.com/${{ github.repository }}/releases/tag/${{ env.RELEASE_TAG }}">View Release</a>
-
-            #github #bitrix #script
+          message: "Hello"
