--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -65,8 +65,8 @@ jobs:
         if: success()
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
           format: html
           disable_notification: true
           message: "Hello"
