--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -65,7 +65,7 @@ jobs:
         if: success()
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.TELEGRAM_TO }}
+          to: "@bitrix_archives"
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: html
           disable_notification: true
