--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -63,9 +63,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Send Telegram Notification
         if: success()
-        uses: yanzay/send-telegram-chat-id@v1
+        uses: appleboy/telegram-action@v1.0.1
         with:
-          chat_id: "@bitrix_archives"
+          to: "@bitrix_archives"
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: html
           disable_notification: true
