--- a/.github/workflows/publish_distro_manual.yaml
+++ b/.github/workflows/publish_distro_manual.yaml
@@ -32,7 +32,7 @@ jobs:
           body: |
             ## 📦 Информация о релизе
 
-            Данный релиз содержит оригинальные архивы для редакции `${{ matrix.distro }}` 1C-Bitrix,
+            Данный релиз содержит оригинальные архивы для редакции `${{ github.event.inputs.distro_code }}` 1C-Bitrix,
             которые были загружены с официального сайта 1С-Битрикс.
 
             **Kernel (main):**
