--- a/.github/workflows/publish_distro_manual.yaml
+++ b/.github/workflows/publish_distro_manual.yaml
@@ -32,8 +32,7 @@ jobs:
           body: |
             ## 📦 Информация о релизе
 
-            Данный релиз содержит оригинальные архивы 1С-Битрикс редакции `${{ github.event.inputs.distro_code }}`,
-            которые были загружены с [официального сайта](https://www.1c-bitrix.ru/download/cms.php).
+            Данный релиз содержит оригинальные архивы 1С-Битрикс редакции `${{ github.event.inputs.distro_code }}`, которые были загружены с [официального сайта](https://www.1c-bitrix.ru/download/cms.php).
 
             **Kernel (main):**
             - Version: `${{ env.BITRIX_MAIN_VERSION }}`
@@ -53,8 +52,7 @@ jobs:
             - SHA1: `${{ env.BITRIX_META_ZIP_SHA1 }}`
             - SHA256: `${{ env.BITRIX_META_ZIP_SHA256 }}`
 
-            В списке вложений также есть файл <a href="https://github.com/${{ github.repository }}/releases/download/${{ env.RELEASE_TAG }}/manifest.json">manifest.json</a>,
-            в котором содержиться вся необходимая информация о текущем релизе, включая основные мета-данные для каждого архива.
+            В списке вложений также есть файл `manifest.json`, в котором содержиться вся необходимая информация о текущем релизе, включая основные мета-данные для каждого архива.
 
             ---
             Сгенерировано автоматическии через GitHub Action.
