--- a/.github/workflows/publish_distros_schedule.yaml
+++ b/.github/workflows/publish_distros_schedule.yaml
@@ -35,6 +35,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Define default variables
+        run: |
+          echo "BITRIX_RELEASE_TAG=${{ matrix.distro }}-$(date +'%Y%m%d')" >> $GITHUB_ENV;
+          echo "BITRIX_SM_VERSION=null" >> $GITHUB_ENV;
+          echo "BITRIX_SM_VERSION_DATE=null" >> $GITHUB_ENV;
+          echo "SKIP_PUBLISH=false" >> $GITHUB_ENV;
+
       - name: Download distros & create manifest
         id: analysis
         run: |
@@ -43,11 +50,10 @@ jobs:
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
-        # Публикуем только если это новая версия и она успешно определена
-        if: env.SKIP_PUBLISH != 'true' && env.BITRIX_MAIN_VERSION != '' && env.BITRIX_MAIN_VERSION != 'null'
+        if: env.SKIP_PUBLISH != 'true' && env.BITRIX_SM_VERSION != '' && env.BITRIX_SM_VERSION != 'null'
         with:
-          tag_name: ${{ matrix.distro }}-${{ env.BITRIX_MAIN_VERSION }}
-          name: "Distro: ${{ matrix.distro }} v${{ env.BITRIX_MAIN_VERSION }}"
+          tag_name: ${{ env.BITRIX_RELEASE_TAG }}
+          name: "Distro: ${{ matrix.distro }} v${{ env.BITRIX_SM_VERSION }}"
           body: |
             ## 📦 Информация о релизе
 
@@ -55,30 +61,18 @@ jobs:
             которые были загружены с официального сайта 1С-Битрикс.
 
             **Kernel (main):**
-            - Version: `${{ env.BITRIX_MAIN_VERSION }}`
-            - Release date: `${{ env.BITRIX_MAIN_VERSION_DATE }}`
+            - Version: `${{ env.BITRIX_SM_VERSION }}`
+            - Release date: `${{ env.BITRIX_SM_VERSION_DATE }}`
 
-            **Tar meta:**
-            - Size: ${{ env.BITRIX_META_TAR_SIZE_MB }} Mb
-            - MD5: `${{ env.BITRIX_META_TAR_MD5 }}`
-            - SHA1: `${{ env.BITRIX_META_TAR_SHA1 }}`
-            - SHA256: `${{ env.BITRIX_META_TAR_SHA256 }}`
-
-            **Zip meta:**
-            - Size: ${{ env.BITRIX_META_ZIP_SIZE_MB }} Mb
-            - MD5: `${{ env.BITRIX_META_ZIP_MD5 }}`
-            - SHA1: `${{ env.BITRIX_META_ZIP_SHA1 }}`
-            - SHA256: `${{ env.BITRIX_META_ZIP_SHA256 }}`
-
-            Релиз содержит файл <a href="https://github.com/${{ github.repository }}/releases/download/${{ env.RELEASE_TAG }}/manifest.json">manifest.json</a>, в котором содержиться вся необходимая информация, включая основные мета-данные для каждого архива.
+            Дополнительную информацию по текущему релизу можно посмотреть в файле `manifest.json`.
 
             ---
             Описание сгенерировано автоматическии через GitHub Action.
           files: |
-            ${{ env.BITRIX_MANIFEST_FILEPATH }}
-            ${{ env.BITRIX_META_ZIP_FILEPATH }}
-            ${{ env.BITRIX_META_ZIP_FILEPATH }}.*
-            ${{ env.BITRIX_META_TAR_FILEPATH }}
-            ${{ env.BITRIX_META_TAR_FILEPATH }}.*
+            ${{ env.BITRIX_MANIFEST_PATH }}
+            ${{ env.BITRIX_ZIP_PATH }}
+            ${{ env.BITRIX_ZIP_PATH }}.*
+            ${{ env.BITRIX_TAR_PATH }}
+            ${{ env.BITRIX_TAR_PATH }}.*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
