--- a/.github/workflows/publish_distros_schedule.yaml
+++ b/.github/workflows/publish_distros_schedule.yaml
@@ -40,6 +40,8 @@ jobs:
         run: |
           chmod +x ./bin/download-distro.sh
           ./bin/download-distro.sh ${{ matrix.distro }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
